# libcint

./: .gitignore  CMakeLists.txt  build.sh
diag/: CMakeLists.txt
diagonal/: CMakeLists.txt  f2c.h
examples/: CMakeLists.txt  diff.c  eig.c  h2_ovlp.c  h2_ovlp_diff.c  h2_rep.c  h2_rep_grad.c  h2_stv.c  h2_stv_grad.c  h2o_ovlp.c  h2o_stv.c  hello_world.c  scf.c  scf_2.c  scf_grad.c
examples/original/: c_call_cartesian.c
fast/: CMakeLists.txt  nocache.c  tcache.c
grad/: CMakeLists.txt  eig.c  h2_rep.c  h2_scf.c  h2_scf_grad.c  h2_stv.c  h2_stv_grad.c  h2o_stv.c  scf.c  scf_new.c
librint/: Cargo.toml  debug.sh  extract.sh  extractt.sh  perfo.sh  rust-toolchain.toml
librint/autodiff/: backward.rs  forward.rs  reverse.rs
librint/custom/: customcombined.rs  customg.rs
librint/faer/: eigen.rs
librint/grad/: h2_rep.rs  h2_rep_grad.rs  h2_stv.rs  h2_stv_grad.rs  scf.rs  scf_grad.rs  stv.rs
librint/grad/h2/: h2_rep.rs  h2_rep_grad.rs  h2_stv.rs  h2_stv_grad.rs  scf.rs  scf_grad.rs
librint/grad/h2o/: h2o_stv.rs  scf.rs
librint/grad/h2o/def2svp/: h2o_stv.rs
librint/grad/h2o/sto3g/: h2o_stv.rs
librint/molecules/O/: sto3g.txt
librint/molecules/h2o/: sto3g.txt
librint/molecules/h4/: sto3g.txt
librint/opt2/: ovlp.rs
librint/perf/: basic.rs  flame.rs  int.rs  pscf.rs  rand.rs  stv.rs
librint/python/: bfgs.py  descent.py  descentfd.py  descentfull.py  diff.py  integrals.py  libcscf.py  libcscf2.py  librpyscf.py  librscf.py  opt.py  pyscf.py  pyscfad_compare.py  pyscfad_grad.py  pyscfad_plot.py  script.py  test.py  time.py  timing.py  utils.py
librint/scf/: buf.rs  bug.rs  dkin.rs  dovlp.rs  dtwo.rs  gradtiming.rs  scf.rs  sph.rs  stv.rs  test.rs  timing.rs  update.rs
librint/src/: bind.rs  breit.rs  c2f.rs  cart2sph.rs  cint.rs  cint1e.rs  cint1e_a.rs  cint1e_grids.rs  cint2c2e.rs  cint2e.rs  cint3c1e.rs  cint3c1e_a.rs  cint3c2e.rs  cint_bas.rs  cint_cpy.rs  dscf.rs  eigh.rs  fblas.rs  find_roots.rs  fmt.rs  g1e.rs  g1e_grids.rs  g2c2e.rs  g2e.rs  g3c1e.rs  g3c2e.rs  intor1.rs  lib.rs  linalg.rs  main.rs  misc.rs  optimizer.rs  p2c.rs  rys_roots.rs  rys_wheeler.rs  scf.rs  stv.rs  utils.rs
librint/src/unused_files/: bind.rs  breit.rs  c2f.rs  cint1e_a.rs  cint1e_grids.rs  cint2c2e.rs  cint3c1e.rs  cint3c1e_a.rs  cint3c2e.rs  g1e_grids.rs  g2c2e.rs  g3c1e.rs  g3c2e.rs  gen.rs  misc.rs  p2r.rs
molecules/O/: sto3g.txt
molecules/c/: sto3g.txt
molecules/h2/: atm.txt  bas.txt  basis.txt  env.txt  sto3g.txt
molecules/h2o/: atm.txt  bas.txt  def2svp.txt  env.txt  sto3g.txt
molecules/h4/: sto3g.txt
python/: CMakeLists.txt  binding_cmake.txt  buf.c  cmake.txt  cmakeso.txt  descent.py  diff.py  finitediff.py  libscf.py  scf.c  scf_cp.c  script.py  stv.c  stvgrad.c
python/binding/: CMakeLists.txt
python/binding/grad/: scf.c
python/binding/scripts/: lib.py  script.py
python/binding/src/: file.c
rust/: cint1e.rs  cint_bas.rs  fblas.rs
scf/: CMakeLists.txt  buf.c  bug.c  scf.c  scf_original.c  stv.c  timing.c
scf/other/: scf_cp.c
src/: config.h.in  ovlp.c
threaderr/: file.rs  mwe.ll
vec/: Cargo.toml  file.rs
