[package]
name = "librint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
faer = "0.19.0"

[profile.dev]
debug = true
opt-level = 0
debug-assertions = true
lto = "fat"

[profile.release]
lto = "fat"



# FAER

[[bin]]
name = "eigen"
path = "faer/eigen.rs"


# CHEM

[[bin]]
name = "h2_stv"
path = "grad/h2/h2_stv.rs"

[[bin]]
name = "h2_stv_grad"
path = "grad/h2/h2_stv_grad.rs"

[[bin]]
name = "h2_rep"
path = "grad/h2/h2_rep.rs"

[[bin]]
name = "h2_rep_grad"
path = "grad/h2/h2_rep_grad.rs"

[[bin]]
name = "h2_scf"
path = "grad/h2/scf.rs"

[[bin]]
name = "h2_scf_grad"
path = "grad/h2/scf_grad.rs"

[[bin]]
name = "h2o_stv"
path = "grad/h2o/h2o_stv.rs"

[[bin]]
name = "h2o_stv_sto3g"
path = "grad/h2o/sto3g/h2o_stv.rs"

[[bin]]
name = "h2o_stv_def2svp"
path = "grad/h2o/def2svp/h2o_stv.rs"

# AUTODIFF

[[bin]]
name = "reverse"
path = "ad/reverse.rs"

[[bin]]
name = "forward"
path = "ad/forward.rs"

[[bin]]
name = "backward"
path = "ad/backward.rs"