[package]
name = "librint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
faer = "0.19.0"
pyo3 = { version = "0.17", features = ["extension-module"] }

[profile.dev]
debug = true
opt-level = 0
debug-assertions = true
lto = "fat"

[profile.release]
lto = "fat"

# ADD TO COMPILE LIBRARY TO .S