[package]
name = "librint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
faer = "0.19.0"
pyo3 = { version = "0.17", features = ["extension-module"] }

[profile.dev]
debug = true
opt-level = 0
debug-assertions = true
lto = "fat"

[profile.release]
lto = "fat"

# ADD TO COMPILE LIBRARY TO .SO
# [lib]
# crate-type = ["cdylib"]

# FAER

[[bin]]
name = "eigen"
path = "faer/eigen.rs"


# CHEM

[[bin]]
name = "h2_stv"
path = "grad/h2/h2_stv.rs"

[[bin]]
name = "h2_stv_grad"
path = "grad/h2/h2_stv_grad.rs"

[[bin]]
name = "h2_rep"
path = "grad/h2/h2_rep.rs"

[[bin]]
name = "h2_rep_grad"
path = "grad/h2/h2_rep_grad.rs"

[[bin]]
name = "h2_scf"
path = "grad/h2/scf.rs"

[[bin]]
name = "h2_scf_grad"
path = "grad/h2/scf_grad.rs"

[[bin]]
name = "h2o_stv"
path = "grad/h2o/h2o_stv.rs"

[[bin]]
name = "h2o_scf"
path = "grad/h2o/scf.rs"

[[bin]]
name = "scf"
path = "scf/scf.rs"

[[bin]]
name = "timing"
path = "scf/timing.rs"

[[bin]]
name = "sph"
path = "scf/sph.rs"

[[bin]]
name = "dovlp"
path = "scf/dovlp.rs"

[[bin]]
name = "dkin"
path = "scf/dkin.rs"

[[bin]]
name = "dtwo"
path = "scf/dtwo.rs"

[[bin]]
name = "time"
path = "scf/gradtiming.rs"

# AUTODIFF

[[bin]]
name = "reverse"
path = "ad/reverse.rs"

[[bin]]
name = "forward"
path = "ad/forward.rs"

[[bin]]
name = "backward"
path = "ad/backward.rs"